src/App.css
html, body {
  height: 100%;
  margin: 0px;
  margin-bottom: 20px;
}

.App {
  text-align: center;
  /*margin-top: 50px;*/
  background-color: #D29F7C; /* set the background color to a light brown */
  min-height: 100%;
  flex-direction: column;
  margin-bottom: 20px;

}


.App-images {
  /*display: block;*/
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 0 auto;
  width: 100px;
  height: 100px;
  padding-top: 200px;
}
@media (min-width: 768px) {
  .App-images {
    max-width: 50%;
  }
}

@media (min-width: 1200px) {
  .App-images {
    max-width: 30%;
  }
}

.App-header {
  background-color: #473729; /* set the header background color to a darker brown */
  height: 110px;
  padding: 20px;
  white-space: nowrap;
  overflow: hidden;
  color: white;
  animation-name: header-fade-in; /* add an animation to fade in the header */
  animation-duration: 4s;
  animation-fill-mode: forwards;
}

@keyframes header-fade-in {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.App-title {
  font-size: 55px;
  font-family: Garamond, Rockwell;
  margin-bottom: 0; /* remove margin bottom to align with intro text */
}

.App-intro {
  overflow: hidden; 
  font-size: 40px;
  width: 80%;
  font-family: Garamond, Rockwell;
  text-align: center;
  margin: auto;
  font-family: Garamond, Rockwell;
  font-size: 30px;
  margin-top: 20px;
  line-height: 1.5;
  /* Ensures the content is not revealed until the animation */
  border-right: .15em solid black; /* The typewriter cursor */
  white-space: nowrap; /* Keeps the content on a single line */
  letter-spacing: .15em; /* Adjust as needed */
  animation:
  header-fade-in 4s forwards,
  typing-1 4s steps(40, end) 1s infinite,
  typing-2 4s steps(40, end) 4s infinite,
  typing-3 4s steps(40, end) 7s infinite,
  stop-cursor 0s 9s forwards,
  blink-caret .75s step-end infinite;
}
@keyframes header-fade-in {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}


/* Animation for the first sentence */
@keyframes typing-1 {
0% { width: 0 }
20% { width: 20% }
40% { width: 40% }
60% { width: 60% }
80% { width: 80% }
100% { width: 100% }
}

/* Animation for the second sentence */
@keyframes typing-2 {
0% { width: 0 }
10% { width: 10% }
20% { width: 20% }
30% { width: 30% }
40% { width: 40% }
50% { width: 50% }
60% { width: 60% }
70% { width: 70% }
80% { width: 80% }
90% { width: 90% }
100% { width: 100% }
}

/* Animation for the third sentence */
@keyframes typing-3 {
0% { width: 0 }
20% { width: 20% }
40% { width: 40% }
60% { width: 60% }
80% { width: 80% }
100% { width: 100% }
}

/* The typewriter cursor animation */
@keyframes blink-caret {
  from, to { border-color: transparent }
  50% { border-color: black; }
}

@keyframes stop-cursor {
  to { border-right-width: 100 }
}

h2 {
  font-family: Garamond, Rockwell;
  font-size: 45px;
  margin-top: 40px;
  animation: shake 10s infinite;
  animation-iteration-count: infinite;
}

@keyframes shake {
  0% {
    transform: translateX(0);
  }
  10% {
    transform: translateX(-10px);
  }
  20% {
    transform: translateX(10px);
  }
  30% {
    transform: translateX(-10px);
  }
  40% {
    transform: translateX(10px);
  }
  50% {
    transform: translateX(-10px);
  }
  60% {
    transform: translateX(10px);
  }
  70% {
    transform: translateX(-10px);
  }
  80% {
    transform: translateX(10px);
  }
}
  


h3 {
  font-family: Garamond, Rockwell;
  font-size: 26px;
  margin-top: 30px;
}

p {
  text-align: center;
  margin: auto;
  width: 80%;
  font-family: Garamond, Rockwell;
  font-size: 26px;
  margin-top: 20px;
  line-height: 1.5;
  animation-name: text-fade-in; /* add an animation to fade in the text */
  animation-duration: 1s;
  animation-fill-mode: forwards;
}

@keyframes text-fade-in {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}


ul {
  list-style-type: none;
  margin-left: 0;
  padding-left: 0;
}

li {
  font-size: 19px;
  margin-top: 10px;
}

a {
  color: #BFA27E; /* set the link color to a light brown */
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

.App-image-animated-fadeIn {
  animation-duration: 6s;
  animation-name: fadeIn;
}

/* Define the fadeIn animation */
@keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.App-text {
  text-align: center;
  margin-top: 200px;
  padding-bottom: 100px;
}


.spotify-container {
  position: relative;
  top: 35px;
}

